realisations des tests fonctionnels
